# ai_aug_coding

./: .env.example  .gitignore  .worktreeinclude  CLAUDE.md  LICENSE  Makefile  README.md  docker-compose.yml
.claude/commands/: fix-issue.md
.claude/output-styles/: concise.md
.claude/rules/: backend.md  frontend.md
.claude/skills/dev-workflow/: SKILL.md
.claude/skills/dev-workflow/references/: releases-and-hotfixes.md
.claude/skills/example/: SKILL.md
.claude/skills/python-features/: SKILL.md  examples.md
.claude/skills/python-style/: SKILL.md
.claude/skills/python-style/references/: examples.md  pep20.md  pep8.md
.claude/skills/python-typing/: SKILL.md  examples.md
.claude/skills/receiving-code-review/: SKILL.md
.claude/skills/requesting-code-review/: SKILL.md
.claude/skills/ts-guide/: SKILL.md
.claude/skills/vue-components/: SKILL.md
.claude/skills/vue-state/: SKILL.md
.claude/skills/vue-styling/: SKILL.md
.claude/skills/vue-testing/: SKILL.md
.github/rulesets/: main_dev_rule.json
.github/workflows/: cd.yml  ci.yml  claude-review.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
docs/: development-process.md
frontend/: .dockerignore  .prettierrc.json  Dockerfile  eslint.config.js  nginx.conf  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
